yard-plugin-common/tests/snapshots/codegen_snapshots__codegen_api_source.snap
---
source: yard-plugin-common/tests/codegen_snapshots.rs
expression: "codegen(include_str!(\"fixtures/api_source.yaml\"))"
---
# Generated by YARD for job: test_job

import sys
import logging
from awsglue.utils import getResolvedOptions
from pyspark.sql import SparkSession
from awsglue.context import GlueContext
from awsglue.job import Job
import requests

logger = logging.getLogger("yard")
logger.setLevel(logging.INFO)

# --- Glue Setup ---
args = getResolvedOptions(sys.argv, ['JOB_NAME'])

spark = (
    SparkSession.builder
    .getOrCreate()
)

sc = spark.sparkContext
glueContext = GlueContext(sc)
job = Job(glueContext)
job.init(args['JOB_NAME'], args)


def run():

    # --- Sources ---
    _resp_weather = requests.get("https://api.weather.gov/stations", headers={"Accept": "application/json", "User-Agent": "yard/1.0"})
    _resp_weather.raise_for_status()
    df_weather = spark.createDataFrame(_resp_weather.json())

    # --- Sink ---
    df_weather.write.format("parquet").mode("overwrite").save("s3://my-bucket/weather/")



if __name__ == "__main__":
    try:
        run()
        job.commit()
    except Exception as e:
        logger.error(f"Job failed: {str(e)}")
        raise
