yard-plugin-common/tests/snapshots/codegen_snapshots__codegen_body_override.snap
---
source: yard-plugin-common/tests/codegen_snapshots.rs
expression: "codegen(include_str!(\"fixtures/body_override.yaml\"))"
---
# Generated by YARD for job: test_job

import sys
import logging
from awsglue.utils import getResolvedOptions
from pyspark.sql import SparkSession
from awsglue.context import GlueContext
from awsglue.job import Job


logger = logging.getLogger("yard")
logger.setLevel(logging.INFO)

# --- Glue Setup ---
args = getResolvedOptions(sys.argv, ['JOB_NAME'])

spark = (
    SparkSession.builder
    .getOrCreate()
)

sc = spark.sparkContext
glueContext = GlueContext(sc)
job = Job(glueContext)
job.init(args['JOB_NAME'], args)


def run():

    df = spark.read.parquet("s3://custom/path")
    df.write.parquet("s3://custom/output")



if __name__ == "__main__":
    try:
        run()
        job.commit()
    except Exception as e:
        logger.error(f"Job failed: {str(e)}")
        raise
