yard-plugin-common/tests/snapshots/codegen_snapshots__codegen_emr_simple.snap
---
source: yard-plugin-common/tests/codegen_snapshots.rs
expression: "codegen(include_str!(\"fixtures/emr_simple.yaml\"))"
---
# Generated by YARD for job: test_job

import logging
from pyspark.sql import SparkSession


logger = logging.getLogger("yard")
logger.setLevel(logging.INFO)

spark = SparkSession.builder.appName("test_job").getOrCreate()


def run():

    # --- Sources ---
    df_events = spark.read.format("parquet").load("s3://my-bucket/events/")

    # --- Sink ---
    df_events.write.format("parquet").mode("overwrite").save("s3://my-bucket/output/")



if __name__ == "__main__":
    try:
        run()
    except Exception as e:
        logger.error(f"Job failed: {str(e)}")
        raise
    finally:
        spark.stop()
