yard-plugin-common/tests/snapshots/codegen_snapshots__codegen_iceberg_fill_nulls.snap
---
source: yard-plugin-common/tests/codegen_snapshots.rs
expression: "codegen(include_str!(\"fixtures/iceberg_fill_nulls.yaml\"))"
---
# Generated by YARD for job: test_job

import sys
import logging
from awsglue.utils import getResolvedOptions
from pyspark.sql import SparkSession
from awsglue.context import GlueContext
from awsglue.job import Job
import boto3
from pyspark.sql import functions as F
from pyspark.sql.types import (StructType, StructField, ArrayType, MapType, DoubleType, FloatType, IntegerType, LongType, ShortType, ByteType, TimestampType, DateType, DecimalType, BinaryType, BooleanType, NullType)


def _yard_has_void(dt):
    if isinstance(dt, NullType):
        return True
    if isinstance(dt, StructType):
        if len(dt.fields) == 0:
            return True
        return any(_yard_has_void(f.dataType) for f in dt.fields)
    if isinstance(dt, ArrayType):
        return _yard_has_void(dt.elementType)
    if isinstance(dt, MapType):
        return _yard_has_void(dt.keyType) or _yard_has_void(dt.valueType)
    return False


def _yard_void_free_ddl(dt):
    if isinstance(dt, NullType):
        return None
    if isinstance(dt, StructType):
        if len(dt.fields) == 0:
            return "struct<>"
        parts = []
        for f in dt.fields:
            sub = _yard_void_free_ddl(f.dataType)
            if sub is not None:
                parts.append("`" + f.name.replace("`", "``") + "`:" + sub)
        if not parts:
            return "struct<>"
        return "struct<" + ",".join(parts) + ">"
    if isinstance(dt, ArrayType):
        inner = _yard_void_free_ddl(dt.elementType)
        if inner is None:
            return None
        return "array<" + inner + ">"
    if isinstance(dt, MapType):
        k = _yard_void_free_ddl(dt.keyType)
        v = _yard_void_free_ddl(dt.valueType)
        if k is None or v is None:
            return None
        return "map<" + k + "," + v + ">"
    return dt.simpleString()


def _yard_void_free_dt(dt):
    # Recursively drop void leaves, empty structs, array<void>, map<..void..> at
    # any depth. Returns a cleaned DataType, or None when the type collapses
    # entirely (caller drops the field). Voids are dropped, never invented: a
    # NullType column carries zero inferable type, so the only honest move is to
    # omit it until a real value re-introduces it via schema evolution.
    if isinstance(dt, NullType):
        return None
    if isinstance(dt, StructType):
        fields = []
        for f in dt.fields:
            sub = _yard_void_free_dt(f.dataType)
            if sub is not None:
                fields.append(StructField(f.name, sub, True))
        if not fields:
            return None
        return StructType(fields)
    if isinstance(dt, ArrayType):
        inner = _yard_void_free_dt(dt.elementType)
        if inner is None:
            return None
        return ArrayType(inner, True)
    if isinstance(dt, MapType):
        k = _yard_void_free_dt(dt.keyType)
        v = _yard_void_free_dt(dt.valueType)
        if k is None or v is None:
            return None
        return MapType(k, v, True)
    return dt


def _yard_void_free_schema(schema):
    fields = []
    for f in schema.fields:
        sub = _yard_void_free_dt(f.dataType)
        if sub is not None:
            fields.append(StructField(f.name, sub, True))
    return StructType(fields)


def _yard_kind(dt):
    if isinstance(dt, StructType):
        return "struct"
    if isinstance(dt, ArrayType):
        return "array"
    if isinstance(dt, MapType):
        return "map"
    return "scalar"


def _yard_kind_mismatch(src_dt, tgt_dt):
    # True when the source-inferred kind diverges from the target kind in a way
    # that cannot be reconciled by casting (struct vs list/map, or scalar vs
    # container). Scalar-vs-scalar mismatches are handled by explicit cast.
    ks, kt = _yard_kind(src_dt), _yard_kind(tgt_dt)
    if ks == kt:
        return False
    return ks != "scalar" or kt != "scalar"


def _yard_merge_dt(live_dt, batch_dt):
    if isinstance(live_dt, StructType) and isinstance(batch_dt, StructType):
        return _yard_merge_schema(live_dt, batch_dt)
    if isinstance(live_dt, ArrayType) and isinstance(batch_dt, ArrayType):
        return ArrayType(_yard_merge_dt(live_dt.elementType, batch_dt.elementType), True)
    if isinstance(live_dt, MapType) and isinstance(batch_dt, MapType):
        return MapType(live_dt.keyType, _yard_merge_dt(live_dt.valueType, batch_dt.valueType), True)
    return live_dt


def _yard_merge_schema(live, batch):
    # Union: live field types win; genuinely-new typed fields from the batch are
    # added (including nested); nested structs merge field-by-field. The result
    # is the auto-evolve target the dataframe is conformed to before writing.
    batch_map = {f.name: f.dataType for f in batch.fields}
    out = []
    seen = set()
    for f in live.fields:
        seen.add(f.name)
        if f.name in batch_map:
            out.append(StructField(f.name, _yard_merge_dt(f.dataType, batch_map[f.name]), True))
        else:
            out.append(StructField(f.name, f.dataType, True))
    for f in batch.fields:
        if f.name not in seen:
            out.append(StructField(f.name, f.dataType, True))
    return StructType(out)


def _yard_read_iceberg_schema(spark, tbl):
    return spark.read.format("iceberg").load(tbl).schema


def _yard_conform(df, target_schema):
    src_types = {f.name: f.dataType for f in df.schema.fields}
    cols = []
    for f in target_schema.fields:
        if f.name in src_types and src_types[f.name] != f.dataType:
            cols.append(df[f.name].cast(f.dataType).alias(f.name))
        elif f.name in src_types:
            cols.append(df[f.name])
        else:
            cols.append(F.lit(None).cast(f.dataType).alias(f.name))
    return df.select(cols)


logger = logging.getLogger("yard")
logger.setLevel(logging.INFO)

# --- Glue Setup ---
args = getResolvedOptions(sys.argv, ['JOB_NAME'])

spark = (
    SparkSession.builder
    .config("spark.sql.extensions", "org.apache.iceberg.spark.extensions.IcebergSparkSessionExtensions")
    .config("spark.sql.catalog.glue_catalog", "org.apache.iceberg.spark.SparkCatalog")
    .config("spark.sql.catalog.glue_catalog.catalog-impl", "org.apache.iceberg.aws.glue.GlueCatalog")
    .config("spark.sql.catalog.glue_catalog.io-impl", "org.apache.iceberg.aws.s3.S3FileIO")
    .config("spark.sql.catalog.glue_catalog.warehouse", "s3://my-bucket/iceberg-warehouse/")
    .getOrCreate()
)

sc = spark.sparkContext
glueContext = GlueContext(sc)
job = Job(glueContext)
job.init(args['JOB_NAME'], args)


def run():

    # --- Sources ---
    df_events = spark.read.format("parquet").load("s3://my-bucket/events/")

    # --- Sink ---
    _glue = boto3.client("glue")
    try:
        _glue.get_database(Name="analytics")
    except _glue.exceptions.EntityNotFoundException:
        _glue.create_database(DatabaseInput={"Name": "analytics"})
    _tbl = "glue_catalog.analytics.events"
    if not spark.catalog.tableExists(_tbl):
        _target = _yard_void_free_schema(df_events.schema)
        df_events = _yard_conform(df_events, _target)
        (df_events.writeTo(_tbl)
            .using("iceberg")
            .tableProperty("format-version", "2")
            .tableProperty("write.spark.accept-any-schema", "true")
            .tableProperty("write.target-file-size-bytes", "536870912")
            .tableProperty("write.parquet.compression-codec", "zstd")
            .tableProperty("write.distribution-mode", "hash")
            .create())
    else:
        _live = _yard_read_iceberg_schema(spark, _tbl)
        _batch = _yard_void_free_schema(df_events.schema)
        _live_types = {_f.name: _f.dataType for _f in _live.fields}
        for _f in _batch.fields:
            if _f.name in _live_types and _yard_kind_mismatch(_f.dataType, _live_types[_f.name]):
                raise ValueError("yard: schema kind mismatch for column '" + _f.name + "': source kind differs from the Iceberg table kind (struct vs list/map); refusing to write")
        _target = _yard_merge_schema(_live, _batch)
        df_events = _yard_conform(df_events, _target)
        _existing_cols = spark.table(_tbl).columns
        _ordered = [_c for _c in _existing_cols if _c in df_events.columns]
        _new = [_c for _c in df_events.columns if _c not in _existing_cols]
        df_events = df_events.select(_ordered + _new)
        df_events.writeTo(_tbl).option("merge-schema", "true").append()



if __name__ == "__main__":
    try:
        run()
        job.commit()
    except Exception as e:
        logger.error(f"Job failed: {str(e)}")
        raise
