yard-plugin-common/tests/snapshots/codegen_snapshots__codegen_jdbc_secret.snap
---
source: yard-plugin-common/tests/codegen_snapshots.rs
expression: "codegen(include_str!(\"fixtures/jdbc_secret.yaml\"))"
---
# Generated by YARD for job: test_job

import sys
import logging
from awsglue.utils import getResolvedOptions
from pyspark.sql import SparkSession
from awsglue.context import GlueContext
from awsglue.job import Job
import boto3
import json

logger = logging.getLogger("yard")
logger.setLevel(logging.INFO)

# --- Glue Setup ---
args = getResolvedOptions(sys.argv, ['JOB_NAME'])

spark = (
    SparkSession.builder
    .getOrCreate()
)

sc = spark.sparkContext
glueContext = GlueContext(sc)
job = Job(glueContext)
job.init(args['JOB_NAME'], args)


def run():

    # --- Sources ---
    users_secret_client = boto3.client("secretsmanager")
    users_secret_resp = users_secret_client.get_secret_value(SecretId="prod/db/credentials")
    users_secret = json.loads(users_secret_resp["SecretString"])
    df_users = spark.read.format("jdbc").option("url", "jdbc:postgresql://db.example.com:5432/mydb").option("dbtable", "public.users").option("user", users_secret["username"]).option("password", users_secret["password"]).option("ssl", "true").option("sslmode", "require").load()

    # --- Sink ---
    df_users.write.format("parquet").mode("overwrite").save("s3://my-bucket/users-export/")



if __name__ == "__main__":
    try:
        run()
        job.commit()
    except Exception as e:
        logger.error(f"Job failed: {str(e)}")
        raise
