yard-plugin-common/tests/snapshots/codegen_snapshots__codegen_multi_transform.snap
---
source: yard-plugin-common/tests/codegen_snapshots.rs
expression: "codegen(include_str!(\"fixtures/multi_transform.yaml\"))"
---
# Generated by YARD for job: test_job

import sys
import logging
from awsglue.utils import getResolvedOptions
from pyspark.sql import SparkSession
from awsglue.context import GlueContext
from awsglue.job import Job


logger = logging.getLogger("yard")
logger.setLevel(logging.INFO)

# --- Glue Setup ---
args = getResolvedOptions(sys.argv, ['JOB_NAME'])

spark = (
    SparkSession.builder
    .getOrCreate()
)

sc = spark.sparkContext
glueContext = GlueContext(sc)
job = Job(glueContext)
job.init(args['JOB_NAME'], args)


def run():

    # --- Sources ---
    df_orders = spark.read.format("parquet").load("s3://my-bucket/orders/")
    df_customers = spark.read.format("parquet").load("s3://my-bucket/customers/")

    # --- Transforms ---
    df_orders = df_orders.filter(col('amount') > 100)
    df_orders.createOrReplaceTempView("orders")
    df_customers.createOrReplaceTempView("customers")
    df_enriched = spark.sql("SELECT o.*, c.name FROM orders o JOIN customers c ON o.customer_id = c.id")
    df_joined = df_orders.join(df_customers, on="customer_id", how="inner")

    # --- Sink ---
    df_joined.write.format("parquet").mode("overwrite").save("s3://my-bucket/enriched-orders/")



if __name__ == "__main__":
    try:
        run()
        job.commit()
    except Exception as e:
        logger.error(f"Job failed: {str(e)}")
        raise
