yard-plugin-common/tests/snapshots/codegen_snapshots__codegen_pii_masking.snap
---
source: yard-plugin-common/tests/codegen_snapshots.rs
expression: "codegen(include_str!(\"fixtures/pii_masking.yaml\"))"
---
# Generated by YARD for job: test_job

import sys
import logging
from awsglue.utils import getResolvedOptions
from pyspark.sql import SparkSession
from awsglue.context import GlueContext
from awsglue.job import Job
from awsglue.dynamicframe import DynamicFrame
from awsglueml.transforms import EntityDetector

logger = logging.getLogger("yard")
logger.setLevel(logging.INFO)

# --- Glue Setup ---
args = getResolvedOptions(sys.argv, ['JOB_NAME'])

spark = (
    SparkSession.builder
    .getOrCreate()
)

sc = spark.sparkContext
glueContext = GlueContext(sc)
job = Job(glueContext)
job.init(args['JOB_NAME'], args)


def run():

    # --- Sources ---
    df_events = spark.read.format("parquet").load("s3://my-bucket/events/")

    # --- PII Masking ---
    _yard_pii_dyf = DynamicFrame.fromDF(df_events, glueContext, "_yard_pii")
    _yard_pii_dyf = EntityDetector.detect(
        _yard_pii_dyf,
        {
            "USA_SSN": [{"action": "REDACT", "actionOptions": {"redactText": "****"}}],
            "CREDIT_CARD": [{"action": "REDACT", "actionOptions": {"redactText": "****"}}]
        },
        "DetectedEntities"
    )
    df_events = _yard_pii_dyf.toDF()
    df_events = df_events.drop("DetectedEntities")

    # --- Sink ---
    df_events.write.format("parquet").mode("overwrite").save("s3://my-bucket/redacted/")



if __name__ == "__main__":
    try:
        run()
        job.commit()
    except Exception as e:
        logger.error(f"Job failed: {str(e)}")
        raise
